--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,12 @@
     "content_scripts": [ {
         "exclude_globs":    [  ],
         "include_globs":    [ "*" ],
-        "js":               [ "dependencies/jquery.js","plugin.js"],
+        "js":               [ "dependencies/jquery.js", "plugin.js"],
         "matches":          ["*://www.wykop.pl/*"],
         "run_at": "document_end"
     } ],
     "converted_from_user_script": true,
-    "description":  "Tworzy spamliste z plusujących dany wpis.",
+    "description":  "Pomaga w tworzeniu tzw. spamlist.",
     "name":         "Powiadamiacz",
     "version":      "1"
 }
